Closed Bug 1123890 Opened 11 years ago Closed 11 years ago

Fix -Winconsistent-missing-override warnings in dom/broadcastchannel

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

I get this build warning (with clang 3.6) for every .cpp file that #includes BroadcastChannelChild.h: { BroadcastChannelChild.h:45:8: warning: 'ActorDestroy' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] } ...and also, BroadcastChannel.cpp itself spews a bunch of these (for several runnables' Run() & Cancel() methods): { BroadcastChannel.cpp:190:17: warning: 'Run' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] BroadcastChannel.cpp:224:17: warning: 'Cancel' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] } Filing this bug on fixing these with MOZ_OVERRIDE annotations.
Attached patch fix v1Splinter Review
Attachment #8552012 - Flags: review?(amarchesini)
Attachment #8552012 - Flags: review?(amarchesini) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: