Bug 1123890: Add MOZ_OVERRIDE annotations to overriding methods in dom/broadcastchannel. r=baku